--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,12 @@
 {
     "name": "randomphp/faro-core",
+    "license": "MIT",
     "bin": [
         "bin/faro"
     ],
     "require": {
-        "symfony/console": "^5.1"
+        "symfony/console": "^5.1",
+        "php-di/php-di": "^6.3"
     },
     "autoload": {
         "psr-4": {
